--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -5,5 +5,7 @@ server.port=5000
 spring.datasource.url = jdbc:mysql://localhost:3306/hb_accounts_tracker?userSSL=false
 spring.datasource.username = apps
 spring.datasource.password = apps#1
+
+spring.jackson.date-format=yyyy-MM-dd
 #For Eureka discovery
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka
