--- a/dashboard-service/src/main/resources/application.properties
+++ b/dashboard-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=5002
 spring.datasource.url = jdbc:mysql://localhost:3306/hb_customers_tracker?userSSL=false
 spring.datasource.username = apps
 spring.datasource.password = apps#1
+spring.jackson.date-format=yyyy-MM-dd
